<?xml version="1.0"?>
<package>
  <name>csapex</name>
  <version>0.9.1</version>
  <description>The csapex package provides a gui for prototyping algorithms and experimenting</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>class_loader</build_depend>
  <run_depend>class_loader</run_depend>
</package>
