<?xml version="1.0"?>
<package>
  <name>csapex</name>
  <version>0.9.5</version>
  <description>The csapex package provides a gui for prototyping algorithms and experimenting</description>

  <maintainer email="mail@betwo.eu">Sebastian Buck</maintainer>
  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>


  <license>BSD</license>

  <url type="website">http://www.ra.cs.uni-tuebingen.de/forschung/apex/</url>
  <url type="repository">https://github.com/cogsys-tuebingen/csapex</url>
  <url type="bugtracker">https://github.com/cogsys-tuebingen/csapex/issues</url>

  <author email="mail@betwo.eu">Sebastian Buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex_core</build_depend>
  <build_depend>csapex_remote</build_depend>
  <build_depend>csapex_qt</build_depend>

  <run_depend>csapex_core</run_depend>
  <run_depend>csapex_remote</run_depend>
  <run_depend>csapex_qt</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
